fix: make item-description-tech-row wrap

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -84,6 +84,8 @@ body {
 
 .item-description-tech-row {
     display: flex;
+    flex-wrap: wrap;
+    row-gap: 0.7em;
     margin: 0.7em 0em
 }
 
